--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -24,5 +24,12 @@
   "contract.status.cancel": "Hủy bỏ",
   "contract.status.complete": "Hoàn thành",
   "contract.status.wait-processing": "Chờ xử lý",
-  "contract.status.processed": "Đã xử lý"
+  "contract.status.processed": "Đã xử lý",
+
+  "createdate.start": "Từ ngày (ngày tạo)",
+  "createdate.end": "Đến ngày (ngày tạo)",
+
+  "chart.contract.created": "Biểu đồ thống kê số lượng hợp đồng tạo",
+  "chart.contract.received": "Biểu đồ thống kê số lượng hợp đồng được gán",
+  "chart.number": "Số lượng"
 }
