edit icon template list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,14 +4,13 @@
   "language_en": "English",
   "language_vi": "Vietnam",
   "notification": "Notification",
-  "search": "Search",
   "account": "Account",
 
   "menu.dashboard": "Dashboard",
   "menu.contract.add": "Add contract",
   "menu.contract.create.list": "Contract created",
   "menu.contract.receive.list": "Contract received",
-  "menu.contract.template.list": "Contract form",
+  "menu.contract.template.list": "Contract template",
   "menu.user.list": "User",
   "menu.organization.list": "Organization",
   "menu.role.list": "Role",
@@ -35,6 +34,9 @@
   "contract.share-for-me": "Shared contract",
   "contract.search.name.placeholder": "Enter search keywords by contract name",
   "contract.search": "Contract search",
+  "contract.name": "Contract name",
+  "contract.file": "File contract",
+  "contract.connect": "Contract connection",
   "contract.type": "Contract type",
   "contract.number": "Contract number",
   "contract.information": "Contract information",
@@ -44,6 +46,9 @@
   "contract.add": "Add contract",
   "contract.edit": "Edit contract",
   "contract.copy": "Copy contract",
+  "contract.not-by-template": "Single contract not by template",
+  "contract.by-template": "Single contract by template",
+  "contract.by-batch": "Batch contract",
 
   "contract-template.list": "List of contract templates",
   "contract-template.create": "Contract template created",
@@ -52,6 +57,11 @@
   "contract-template.type": "Contract template type",
   "contract-template.code": "Contract template code",
 
+  "choose": "Choose",
+  "choose.contract.file": "Choose file contract (PDF, DOC, DOCX)",
+  "choose.contract.file.attach": "Choose file attach (PDF, DOC, DOCX)",
+  "file.attach": "File attach",
+  "note": "Note",
   "create-date": "Create date",
   "expiration-date": "Expiration date",
   "createdate.start": "From date (create date)",
@@ -61,5 +71,20 @@
   "chart.contract.received": "Statistical chart of the number of assigned contracts",
   "chart.number": "Quantity",
 
-  "action": "Action"
+  "action": "Action",
+  "user.view": "Viewer",
+  "user.sign": "Signer",
+  "user.doc": "Document maker",
+  "user.lead": "Leader",
+  "user.name": "Name",
+  "user.email": "Email",
+  "user.sign-type": "Sign type",
+  "user.otp": "OTP",
+  "user.phone": "Phone",
+
+  "btn.search": "Search",
+  "btn.add": "Add",
+  "btn.next": "Next",
+  "btn.previous": "Previous",
+  "btn.save-draff": "Save draff"
 }
