--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -4,7 +4,6 @@
   "language_en": "Tiếng Anh",
   "language_vi": "Tiếng Việt",
   "notification": "Thông báo",
-  "search": "Tìm kiếm",
   "account": "Tài khoản",
 
   "menu.dashboard": "Trang chủ",
@@ -35,6 +34,9 @@
   "contract.share-for-me": "Hợp đồng được chia sẻ",
   "contract.search.name.placeholder": "Nhập từ khóa tìm kiếm theo tên hợp đồng",
   "contract.search": "Tìm kiếm hợp đồng",
+  "contract.name": "Tên hợp đồng",
+  "contract.file": "File hợp đồng",
+  "contract.connect": "Hợp đồng liên quan",
   "contract.type": "Loại hợp đồng",
   "contract.number": "Số hợp đồng",
   "contract.information": "Thông tin hợp đồng",
@@ -44,6 +46,9 @@
   "contract.add": "Thêm mới hợp đồng",
   "contract.edit": "Sửa hợp đồng",
   "contract.copy": "Sao chép hợp đồng",
+  "contract.not-by-template": "Hợp đồng đơn lẻ không theo mẫu",
+  "contract.by-template": "Hợp đồng đơn lẻ theo mẫu",
+  "contract.by-batch": "Hợp đồng theo lô",
 
   "contract-template.list": "Danh sách mẫu hợp đồng",
   "contract-template.create": "Mẫu hợp đồng tạo",
@@ -52,6 +57,11 @@
   "contract-template.type": "Loại mẫu hợp đồng",
   "contract-template.code": "Mã mẫu",
 
+  "choose": "Chọn",
+  "choose.contract.file": "Chọn file hợp đồng (PDF, DOC, DOCX)",
+  "choose.contract.file.attach": "Chọn file đính kèm (PDF, DOC, DOCX)",
+  "file.attach": "File đính kèm",
+  "note": "Lời nhắn",
   "create-date": "Ngày tạo",
   "expiration-date": "Ngày hết hạn ký",
   "createdate.start": "Từ ngày (ngày tạo)",
@@ -61,5 +71,20 @@
   "chart.contract.received": "Biểu đồ thống kê số lượng hợp đồng được gán",
   "chart.number": "Số lượng",
 
-  "action": "Thao tác"
+  "action": "Thao tác",
+  "user.view": "Người xem xét",
+  "user.sign": "Người ký",
+  "user.doc": "Văn thư",
+  "user.lead": "Người điều phối",
+  "user.name": "Họ tên",
+  "user.email": "Email",
+  "user.sign-type": "Loại ký",
+  "user.otp": "OTP",
+  "user.phone": "Số điện thoại",
+
+  "btn.search": "Tìm kiếm",
+  "btn.add": "Thêm mới",
+  "btn.next": "Tiếp theo",
+  "btn.previous": "Quay lại",
+  "btn.save-draff": "Lưu nháp"
 }
