edit signup multi

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,19 @@
   "notification": "Notification",
   "account": "Account",
 
+  "login": "Login",
+  "login.username": "Username",
+  "login.password": "Password",
+  "login.forgot_password": "Forgot password",
+  "login.forgot_password.note":"Enter the email address you used to register on MobiFone eContract",
+  "signup": "Signup",
+  "signup.not_account": "Do not have an account",
+  "login.reset_password": "Reset password",
+  "login.password_new.confirm.note": "Enter new password and confirm password again",
+  "login.password_new": "New password",
+  "login.password_old": "Old password",
+  "login.password_new.confirm": "Confirm new password",
+
   "menu.dashboard": "Dashboard",
   "menu.contract.add": "Add contract",
   "menu.contract.create.list": "Contract created",
@@ -97,7 +110,13 @@
   "organization" : "Organization",
   "organization.me": "My organization",
   "organization.partner.name": "Partner name",
+  "scale": "Scale",
+  "address": "Address",
+  "tax_code" : "Tax code",
+  "representative": "Representative",
+  "position": "Position",
 
+  "btn.sendRequest": "Send request",
   "btn.search": "Search",
   "btn.add": "Add",
   "btn.next": "Next",
