--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,6 +6,19 @@
   "notification": "Thông báo",
   "account": "Tài khoản",
 
+  "login": "Đăng nhập",
+  "login.username": "Tên đăng nhập",
+  "login.password": "Mật khẩu",
+  "login.forgot_password": "Quên mật khẩu",
+  "login.forgot_password.note":"Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract",
+  "signup": "Đăng ký",
+  "signup.not_account": "Bạn chưa có tài khoản",
+  "login.reset_password": "Đặt lại mật khẩu",
+  "login.password_new.confirm.note": "Nhập mật khẩu mới và xác nhận lại mật khẩu",
+  "login.password_new": "Mật khẩu mới",
+  "login.password_old": "Mật khẩu cũ",
+  "login.password_new.confirm": "Xác nhận mật khẩu mới",
+
   "menu.dashboard": "Trang chủ",
   "menu.contract.add": "Tạo mới HĐ",
   "menu.contract.create.list": "Hợp đồng đã tạo",
@@ -97,7 +110,13 @@
   "organization" : "Tổ chức",
   "organization.me": "Tổ chức của tôi",
   "organization.partner.name": "Tên đối tác",
+  "scale": "Quy mô",
+  "address": "Địa chỉ",
+  "tax_code" : "Mã số thuế",
+  "representative": "Người đại diện",
+  "position": "Chức vụ",
 
+  "btn.sendRequest": "Gửi yêu cầu",
   "btn.search": "Tìm kiếm",
   "btn.add": "Thêm mới",
   "btn.next": "Tiếp theo",
