--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,6 +44,8 @@
   "contract.status.complete": "Complete",
   "contract.status.wait-processing": "Wait processing",
   "contract.status.processed": "Processed",
+  "contract.status.create.complete": "Complete creating",
+  "contract.status.undefined": "Undefined",
   "contract.me": "My contract",
   "contract.organization": "Organizational contract",
   "contract.wait-for-me": "Contract to be handled",
@@ -65,6 +67,32 @@
   "contract.not-by-template": "Single contract not by template",
   "contract.by-template": "Single contract by template",
   "contract.by-batch": "Batch contract",
+  "contract.side.a": "Side A",
+  "contract.side.b": "Side B",
+  "contract.status": "Status",
+  "contract.person-process": "Handler",
+  "contract.delete": "Delete contract",
+  "contract.connect.view": "View related contract",
+  "contract.connect.add": "Add related contracts",
+  "contract.cancel": "Cancel contract",
+  "contract.download": "Download contract",
+  "contract.share": "Share contract",
+  "contract.lead": "Coordinator",
+  "contract.view": "Consider",
+  "contract.sign": "Sign",
+  "contract.document": "Document",
+  "contract.wait-lead": "Waiting coordination",
+  "contract.wait-view": "Waiting consider",
+  "contract.wait-sign": "Waiting sign",
+  "contract.wait-document": "Waiting document",
+  "contract.leaded": "Coordinated",
+  "contract.viewed": "Viewed",
+  "contract.signed": "Signed",
+  "contract.documented": "Documented",
+  "contract.lead-refused": "Refused to coordinate",
+  "contract.view-refused": "Refused to view",
+  "contract.sign-refused": "Refused to sign",
+  "contract.document-refused": "Refused to document",
 
   "contract-template.list": "List of contract templates",
   "contract-template.create": "Contract template created",
@@ -78,6 +106,8 @@
   "choose.contract.file": "Choose file contract (PDF, DOC, DOCX)",
   "choose.contract.file.attach": "Choose file attach (PDF, DOC, DOCX)",
   "choose.document.file.excel": "Choose file (XLS, XLSX)",
+  "choose.sign.file.image": "Select a signature image file from your computer",
+  "support.format.PNG.JPG.JPGE": "Support format PNG, JPG, JPGE",
   "file.attach": "File attach",
   "note": "Note",
   "create-date": "Create date",
