--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -44,6 +44,8 @@
   "contract.status.complete": "Hoàn thành",
   "contract.status.wait-processing": "Chờ xử lý",
   "contract.status.processed": "Đã xử lý",
+  "contract.status.create.complete": "Hoàn thành tạo hợp đồng",
+  "contract.status.undefined": "Chưa xác định",
   "contract.me": "Hợp đồng của tôi",
   "contract.organization": "Hợp đồng của tổ chức",
   "contract.wait-for-me": "Hợp đồng cần xử lý",
@@ -65,6 +67,32 @@
   "contract.not-by-template": "Hợp đồng đơn lẻ không theo mẫu",
   "contract.by-template": "Hợp đồng đơn lẻ theo mẫu",
   "contract.by-batch": "Hợp đồng theo lô",
+  "contract.side.a": "Bên A",
+  "contract.side.b": "Bên B",
+  "contract.status": "Trạng thái",
+  "contract.person-process": "Người xử lý",
+  "contract.delete": "Xóa hợp đồng",
+  "contract.connect.view": "Xem hợp đồng liên quan",
+  "contract.connect.add": "Thêm hợp đồng liên quan",
+  "contract.cancel": "Hủy hợp đồng",
+  "contract.download": "Tải hợp đồng",
+  "contract.share": "Chia sẻ hợp đồng",
+  "contract.lead": "Điều phối",
+  "contract.view": "Xem xét",
+  "contract.sign": "Ký",
+  "contract.document": "Văn thư",
+  "contract.wait-lead": "Chờ điều phối",
+  "contract.wait-view": "Chờ xem xét",
+  "contract.wait-sign": "Chờ ký",
+  "contract.wait-document": "Chờ văn thư",
+  "contract.leaded": "Đã điều phối",
+  "contract.viewed": "Đã xem xét",
+  "contract.signed": "Đã ký",
+  "contract.documented": "Đã văn thư",
+  "contract.lead-refused": "Đã từ chối điều phối",
+  "contract.view-refused": "Đã từ chối xem xét",
+  "contract.sign-refused": "Đã từ chối ký",
+  "contract.document-refused": "Đã từ chối văn thư",
 
   "contract-template.list": "Danh sách mẫu hợp đồng",
   "contract-template.create": "Mẫu hợp đồng tạo",
@@ -78,6 +106,8 @@
   "choose.contract.file": "Chọn file hợp đồng (PDF, DOC, DOCX)",
   "choose.contract.file.attach": "Chọn file đính kèm (PDF, DOC, DOCX)",
   "choose.document.file.excel": "Chọn file tài liệu (XLS, XLSX)",
+  "choose.sign.file.image": "Chọn file ảnh chữ ký từ máy tính của bạn",
+  "support.format.PNG.JPG.JPGE": "Hỗ trợ định dạng PNG, JPG, JPGE",
   "file.attach": "File đính kèm",
   "note": "Lời nhắn",
   "create-date": "Ngày tạo",
