--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -174,5 +174,18 @@
   "btn.add.user.doc": "Thêm văn thư",
   "btn.add.partner": "Thêm đối tác",
 
-  "no.contract.add.close": "Hợp đồng chưa hoàn thành. Bạn có muốn lưu bản nháp không?"
+  "no.contract.add.close": "Hợp đồng chưa hoàn thành. Bạn có muốn lưu bản nháp không?",
+  "no.update.information.success": "Cập nhật thông tin thành công",
+  "no.update.sign.file.image.success": "Cập nhật file chữ ký ảnh thành công",
+  "no.update.sign.kpi.success": "Cập nhật chữ ký KPI thành công",
+  "no.update.sign.hsm.success": "Cập nhật chữ ký HSM thành công",
+  "no.push.contract.draft.success": "Lưu nháp thành công",
+
+  "no.push.information.contract.error": "Đẩy thông tin hợp đồng thất bại",
+  "no.push.file.contract.error": "Đẩy file thất bại",
+  "no.push.file.connect.contract.error": "Liên kết file hợp đồng thất bại",
+  "no.push.file.attach.error": "Đẩy file đính kèm thất bại",
+  "no.push.file.connect.attach.error": "Liên kết file đính kèm thất bại",
+  "no.get.information.organization.error": "Lấy thông tin tổ chức thất bại"
+
 }
