--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -139,6 +139,15 @@
   "sign.kpi" : "KPI signature",
   "sign.hsm" : "HSM signature",
 
+  "error.server": "Error! Please contact the developer for processing",
+  "error.username.required": "Username is required",
+  "error.password.required": "Password is required",
+  "error.username.password": "Username or password is incorrect",
+  "error.password-new.required": "Password new is required",
+  "error.confirm-password-new.required": "Confirm password new is required",
+  "error.confirm-password-new.incorrect": "Confirm password new is incorrect",
+  "error.contract.name.required": "Contract name is required",
+  "error.contract.file.required": "Contract file is required",
   "error.user.name.required": "Name is required",
   "error.user.email.required": "Email is required",
   "error.user.email.format": "Invalid email",
@@ -180,7 +189,10 @@
   "no.update.sign.kpi.success": "Updated sign KPI successfully",
   "no.update.sign.hsm.success": "Updated sign HSM successfully",
   "no.push.contract.draft.success": "Save draft successfully",
+  "no.signup.success": "Signup successfully",
+  "no.reset-password.login.success": "Change the new password successfully. Please login to continue",
 
+  "no.reset.password.error": "Reset password failed",
   "no.push.information.contract.error": "Push contract information failed",
   "no.push.file.contract.error": "Push contract file failed",
   "no.push.file.connect.contract.error": "Push contract file connect failed",
