--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -144,5 +144,15 @@
   "btn.add.user.doc": "Thêm văn thư",
   "btn.add.partner": "Thêm đối tác",
 
-  "no.contract.add.close": "Hợp đồng chưa hoàn thành. Bạn có muốn lưu bản nháp không?"
+  "no.contract.add.close": "Hợp đồng chưa hoàn thành. Bạn có muốn lưu bản nháp không?",
+  "nhap_sdt": "Nhập số điện thoại",
+  "to_chuc_cua_toi": "TỔ CHỨC CỦA TÔI",
+  "note_chon_loai_ki_so": "Lưu ý: bạn chỉ được phép chọn 1 kiểu ký số!",
+  "doi_tac": "Đối tác",
+  "xoa_doi_tac_to_chuc": "Xóa đối tác tổ chức",
+  "xoa_doi_tac_ca_nhan": "Xóa đối tác cá nhân",
+  "them_doi_tac": "Thêm đối tác",
+  "nhap_email": "Nhập email",
+  "nhap_ho_va_ten": "Nhập họ và tên",
+  "nhap_ten_doi_tac_to_chuc": "Nhập tên đối tác tổ chức..."
 }
