--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -80,19 +80,19 @@
   "contract.lead": "Điều phối",
   "contract.view": "Xem xét",
   "contract.sign": "Ký",
-  "contract.document": "Văn thư",
+  "contract.document": "Đóng dấu",
   "contract.wait-lead": "Chờ điều phối",
   "contract.wait-view": "Chờ xem xét",
   "contract.wait-sign": "Chờ ký",
-  "contract.wait-document": "Chờ văn thư",
+  "contract.wait-document": "Chờ đóng dấu",
   "contract.leaded": "Đã điều phối",
   "contract.viewed": "Đã xem xét",
   "contract.signed": "Đã ký",
-  "contract.documented": "Đã văn thư",
+  "contract.documented": "Đã đóng dấu",
   "contract.lead-refused": "Đã từ chối điều phối",
   "contract.view-refused": "Đã từ chối xem xét",
   "contract.sign-refused": "Đã từ chối ký",
-  "contract.document-refused": "Đã từ chối văn thư",
+  "contract.document-refused": "Đã từ chối đóng dấu",
 
   "contract-template.list": "Danh sách mẫu hợp đồng",
   "contract-template.create": "Mẫu hợp đồng tạo",
