--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -137,7 +137,7 @@
 
   "sign.information" : "Signature information",
   "sign.file-image" : "Image signature file",
-  "sign.kpi" : "KPI signature",
+  "sign.kpi" : "PKI signature",
   "sign.hsm" : "HSM signature",
 
   "error.server": "Error! Please contact the developer for processing",
