--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -135,6 +135,23 @@
   "user.information": "Account information",
   "user.name.v2": "Username",
 
+  "unit.list": "Organizations list",
+  "unit.add": "Add organizations",
+  "unit.update": "Update organizations",
+  "unit.information": "Organizations information",
+  "unit.code": "Organization code",
+  "unit.name": "Organization name",
+  "unit.short-name": "Abbreviations",
+  "unit.status": "Status",
+  "unit.type": "Organization type",
+  "unit.email": "Email",
+  "unit.parent": "Organization parent",
+  "unit.phone": "Phone",
+  "unit.fax": "Fax",
+  "unit.active": "Active",
+  "unit.inactive": "Inactive",
+  "unit.manage": "Manage",
+
   "sign.information" : "Signature information",
   "sign.file-image" : "Image signature file",
   "sign.kpi" : "PKI signature",
@@ -173,6 +190,7 @@
   "btn.add": "Add",
   "btn.next": "Next",
   "btn.previous": "Previous",
+  "btn.save": "Save",
   "btn.save-draff": "Save draff",
   "btn.update": "Update",
   "btn.close": "Close",
