--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -135,6 +135,23 @@
   "user.information": "Thông tin tài khoản",
   "user.name.v2": "Tên người dùng",
 
+  "unit.list": "Danh sách tổ chức",
+  "unit.add": "Thêm mới tổ chức",
+  "unit.update": "Cập nhật thông tin tổ chức",
+  "unit.information": "Thông tin tổ chức",
+  "unit.code": "Mã tổ chức",
+  "unit.name": "Tên tổ chức",
+  "unit.short-name": "Tên viết tắt",
+  "unit.status": "Trạng thái",
+  "unit.type": "Loại tổ chức",
+  "unit.email": "Địa chỉ email",
+  "unit.parent": "Tổ chức cấp trên",
+  "unit.phone": "Số điện thoại",
+  "unit.fax": "Fax",
+  "unit.active": "Hoạt động",
+  "unit.inactive": "Không hoạt động",
+  "unit.manage": "Quản lý",
+
   "sign.information" : "Thông tin chữ ký",
   "sign.file-image" : "File ảnh chữ ký",
   "sign.kpi" : "Chữ ký PKI",
@@ -173,6 +190,7 @@
   "btn.add": "Thêm mới",
   "btn.next": "Tiếp theo",
   "btn.previous": "Quay lại",
+  "btn.save": "Lưu lại",
   "btn.save-draff": "Lưu nháp",
   "btn.update": "Cập nhật",
   "btn.close": "Đóng",
