--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,7 @@
 
   "document": "Document",
   "document.user.use": "Document use",
+  "document.plugin.pki": "Plugin sign PKI",
 
   "menu.dashboard": "Dashboard",
   "menu.contract.add": "Add contract",
@@ -138,6 +139,9 @@
   "user.information.individual": "Personal information",
   "user.information": "Account information",
   "user.name.v2": "Username",
+  "user.add": "Add user",
+  "user.update": "Update user",
+  "user.information.v2": "User information",
 
   "unit.list": "Organizations list",
   "unit.add": "Add organizations",
