--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -24,6 +24,7 @@
 
   "document": "Tài liệu",
   "document.user.use": "Hướng dẫn sử dụng",
+  "document.plugin.pki": "Plugin ký số PKI",
 
   "menu.dashboard": "Trang chủ",
   "menu.contract.add": "Tạo mới HĐ",
@@ -138,7 +139,10 @@
   "user.information.individual": "Thông tin cá nhân",
   "user.information": "Thông tin tài khoản",
   "user.name.v2": "Tên người dùng",
-
+  "user.add": "Thêm mới người dùng",
+  "user.update": "Cập nhật thông tin người dùng",
+  "user.information.v2": "Thông tin người dùng",
+ 
   "unit.list": "Danh sách tổ chức",
   "unit.add": "Thêm mới tổ chức",
   "unit.update": "Cập nhật thông tin tổ chức",
