--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -139,6 +139,7 @@
   "user.information.individual": "Personal information",
   "user.information": "Account information",
   "user.name.v2": "Username",
+  "user.list": "User list",
   "user.add": "Add user",
   "user.update": "Update user",
   "user.information.v2": "User information",
@@ -159,6 +160,23 @@
   "unit.active": "Active",
   "unit.inactive": "Inactive",
   "unit.manage": "Manage",
+
+  "role.list": "Role list",
+  "role.add": "Add role",
+  "role.update": "Update role",
+  "role.information": "Role information",
+  "role.name": "Role name",
+  "role.code" : "Role code",
+  "role.function": "Role detail",
+  "role.manage": "Manage",
+
+  "contract-type.list": "Contract type list",
+  "contract-type.add": "Add contract type",
+  "contract-type.update": "Update contract type",
+  "contract-type.information": "Contract type information",
+  "contract-type.name": "Contract type name",
+  "contract-type.code": "Contract type code",
+  "contract-type.manage": "Manage",
 
   "sign.information" : "Signature information",
   "sign.file-image" : "Image signature file",
