--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -108,7 +108,7 @@
 
   "file.document": "File tài liệu",
   "choose": "Chọn",
-  "choose.contract.file": "Chọn file hợp đồng (PDF, DOC, DOCX)",
+  "choose.contract.file": "Chọn file hợp đồng (PDF)",
   "choose.contract.file.attach": "Chọn file đính kèm (PDF, DOC, DOCX)",
   "choose.document.file.excel": "Chọn file tài liệu (XLS, XLSX)",
   "choose.sign.file.image": "Chọn file ảnh chữ ký từ máy tính của bạn",
