delete contract type

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -164,6 +164,7 @@
   "role.list": "Role list",
   "role.add": "Add role",
   "role.update": "Update role",
+  "role.delete": "Delete role",
   "role.information": "Role information",
   "role.name": "Role name",
   "role.code" : "Role code",
@@ -173,6 +174,7 @@
   "contract-type.list": "Contract type list",
   "contract-type.add": "Add contract type",
   "contract-type.update": "Update contract type",
+  "contract-type.delete": "Delete contract type",
   "contract-type.information": "Contract type information",
   "contract-type.name": "Contract type name",
   "contract-type.code": "Contract type code",
