--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -164,6 +164,7 @@
   "role.list": "Danh sách vai trò",
   "role.add": "Thêm mới vai trò",
   "role.update": "Cập nhật thông tin vai trò",
+  "role.delete": "Xóa vai trò",
   "role.information": "Thông tin vai trò",
   "role.name": "Tên vai trò",
   "role.code" : "Mã vai trò",
@@ -173,6 +174,7 @@
   "contract-type.list": "Danh sách loại hợp đồng",
   "contract-type.add": "Thêm mới loại hợp đồng",
   "contract-type.update": "Cập nhật thông tin loại hợp đồng",
+  "contract-type.delete": "Xóa loại hợp đồng",
   "contract-type.information": "Thông tin loại hợp đồng",
   "contract-type.name": "Tên loại hợp đồng",
   "contract-type.code": "Mã loại hợp đồng",
