check sign digital

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -35,6 +35,7 @@
   "menu.organization.list": "Tổ chức",
   "menu.role.list": "Vai trò",
   "menu.contract.type.list": "Loại hợp đồng",
+  "menu.check.sign.digital": "Kiểm tra chữ ký số",
 
   "contract.list": "Danh sách hợp đồng",
   "contract.list.created": "Danh sách hợp đồng đã tạo",
