--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -225,6 +225,7 @@
   "btn.close": "Đóng",
   "btn.cancel": "Hủy bỏ",
   "btn.accept": "Đồng ý",
+  "btn.share": "Chia sẻ",
   "btn.add.user.view": "Thêm người xem xét",
   "btn.add.user.sign": "Thêm người ký",
   "btn.add.user.lead": "Thêm người điều phối",
